add fonts and colo scheme

--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
-  <title="Official Website of Max Flinders Racing"
-  meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title="Official Website of Max Flinders Racing"></title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Roboto" rel="stylesheet">
 </head>
-
-<!-- <div id="band" class="container"> -->
-<!-- <div id="tour" class="container"> -->
-<!-- <div id="contact" class="container"> -->
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <nav class="navbar navbar-default navbar-fixed-top">
@@ -39,40 +36,39 @@
     </div>
   </nav>
 
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
+  <!-- Indicators -->
+  <div id="mainCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#mainCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#mainCarousel" data-slide-to="1"></li>
+      <li data-target="#mainCarousel" data-slide-to="2"></li>
     </ol>
 
     <!-- Wrapper for Slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="pics/racing.jpg" alt="Max Flinders taking a corner during a race"/>
+        <img src="pics/racing.jpg" alt="Max Flinders taking a corner during a race" />
         <div class="carousel-caption">
           <h3>The Official Home of Max Flinders Racing</h3>
         </div>
       </div>
 
       <div class="item">
-        <img src="pics/apex.jpg" alt="Max Flinders celebrating a hard race" />
+        <img src="pics/apex.jpg" alt="Max Flinders dragging knee" />
       </div>
 
       <div class="item">
-        <img src="pics/crash.jpg" alt="Max Flinders taking a tumble" />
+        <img src="pics/crash.jpg" alt="Max Flinders motorcycle crash" />
       </div>
 
     </div>
 
     <!-- Carousel Controls -->
-
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <a class="left carousel-control" href="#mainCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Back</span>
     </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <a class="right carousel-control" href="#mainCarousel" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
@@ -81,51 +77,51 @@
 
   <!-- Meet the Team Section -->
   <div class="bg-0">
-  <div href="#team" id="team" class="container text-center">
-    <h3>Meet the Team</h3>
-    <p><em>We live for race day</em></p>
-    <br />
+    <div href="#team" id="team" class="container text-center">
+      <h3>Meet the Team</h3>
+      <p><em>we live for race day</em></p>
+      <br />
 
-    <div class="row">
-      <div class="col-sm-4">
-        <p><strong>Max Flinders</strong></p>
-        <a href="#maxBtn" data-toggle="collapse">
-          <img class="img-circle person" src="pics/max.jpg" alt="Max Flinders" />
-    </a>
-        <div id="maxBtn" class="collapse">
-          <p>Semi-pro Moto Racer</p>
-          <p>Dog lover</p>
-          <p>Not allowed to ride on the street</p>
+      <div id="bio" class="row">
+        <div class="col-sm-4">
+          <p><strong>Max Flinders</strong></p>
+          <a href="#maxBtn" data-toggle="collapse">
+            <img class="img-circle person" src="pics/max.jpg" alt="Max Flinders" />
+          </a>
+          <div id="maxBtn" class="collapse">
+            <p>Semi-pro Moto Racer</p>
+            <p>Dog lover</p>
+            <p>Not allowed to ride on the street</p>
+          </div>
         </div>
-      </div>
 
-      <div class="col-sm-4">
-        <p><strong>Martin Flinders</strong></p>
-        <a href="#dadBtn" data-toggle="collapse">
-        <img id="pops" class="img-circle person" src="pics/pop-crop-2.jpg" alt="Martin Flinders" />
-      </a>
-      <div id="dadBtn" class="collapse">
-        <p>Team Principal</p>
-        <p>Buck stops with him</p>
-        <p>Lives out of a van half the year</p>
-      </div>
-    </div>
-
-      <div class="col-sm-4">
-        <p><strong>'Stache Guy</strong></p>
-        <a href="#stacheBtn" data-toggle="collapse">
-        <img class="img-circle person" src="pics/stache-crop.jpg" alt="Beard Guy" />
-      </a>
-        <div id="stacheBtn" class="collapse">
-          <p>Chief Mechanic</p>
-          <p>Born with a wrench in hand</p>
-          <p>Earnings go toward moustache wax</p>
+        <div class="col-sm-4">
+          <p><strong><s>Martin Flinders</s> Don</strong></p>
+          <a href="#dadBtn" data-toggle="collapse">
+            <img id="pops" class="img-circle person" src="pics/pop-crop-2.jpg" alt="Martin Flinders" />
+          </a>
+          <div id="dadBtn" class="collapse">
+            <p>Team Principal</p>
+            <p>Buck stops with him</p>
+            <p>Lives out of a van half the year</p>
+          </div>
         </div>
-      </div>
 
+        <div class="col-sm-4">
+          <p><strong>'Stache Guy</strong></p>
+          <a href="#stacheBtn" data-toggle="collapse">
+            <img class="img-circle person" src="pics/stache-crop.jpg" alt="Beard Guy" />
+          </a>
+          <div id="stacheBtn" class="collapse">
+            <p>Chief Mechanic</p>
+            <p>Born with a wrench in hand</p>
+            <p>Earnings go toward moustache wax</p>
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
-</div>
 
   <!--Upcoming Races Section-->
   <div class="bg-1">
@@ -141,71 +137,98 @@
     </div>
   </div>
 
-  <!-- Contact Section -->
-  <div id="contact" class="container">
-  <h3 class="text-center">Get In Touch</h3>
-  <p class="text-center"><em>We love our fans!</em></p>
-  <div class="row test">
-    <div class="col-md-4">
-      <p>Fan? Drop us a note.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span>Slidell, LA</p>
-      <p><span class="glyphicon glyphicon-phone"></span>Phone: (123) 456-789</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
-    </div>
-    <div class="col-md-8">
+  <!-- Sponsors -->
+  <div class="sponsors">
+    <div class="container text-center">
+      <h2>Check Out Our Sponsors</h2>
+      <h4>we work with some of the best names in the biz</h4>
+      <br>
+
       <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+        <div class="col-sm-4">
+          <img src="https://placeimg.com/200/200/animals" alt="" />
         </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+        <div class="col-sm-4">
+          <img src="https://placeimg.com/200/200/animals" alt="" />
+        </div>
+        <div class="col-sm-4">
+          <img src="https://placeimg.com/200/200/animals" alt="" />
         </div>
       </div>
-      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
-      <div class="row">
-        <div class="col-md-12 form-group">
-          <button class="btn pull-right" type="submit">Send</button>
+
+    </div>
+  </div>
+
+
+  <!-- Contact Section -->
+  <div class="contact-us">
+    <div id="contact" class="container">
+      <h3 class="text-center">Get In Touch</h3>
+      <p class="text-center"><em>we love our fans!</em></p>
+      <div class="row test">
+        <div class="col-md-4">
+          <p>Fan? Drop us a note.</p>
+          <p><span class="glyphicon glyphicon-map-marker"></span>Slidell, LA</p>
+          <p><span class="glyphicon glyphicon-phone"></span>Phone: (123) 456-789</p>
+          <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
+        </div>
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-sm-6 form-group">
+              <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+            </div>
+            <div class="col-sm-6 form-group">
+              <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+            </div>
+          </div>
+          <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+          <div class="row">
+            <div class="col-md-12 form-group">
+              <button class="btn pull-right" type="submit">Send</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<!-- Footer -->
-<footer class="text-center">
-  <a class="up-arrow" href="#top" data-toggle="tooltip" title="TO TOP">
-    <span class="glyphicon glyphicon-chevron-up"></span>
-  </a><br><br>
-  <p>web design by chris melo web design</p>
-</footer>
 
-<script>
-$(document).ready(function(){
-  // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+  <!-- Footer -->
+  <footer class="text-center">
+    <a class="up-arrow" href="#top" data-toggle="tooltip" title="TO TOP">
+      <span class="glyphicon glyphicon-chevron-up"></span>
+    </a><br><br>
+    <p>made by chris</p>
+    <p>i accept swag and riding lessons in lieu of cash</p>
+  </footer>
 
-  // Make sure this.hash has a value before overriding default behavior
-  if (this.hash !== "" && this.hash != "#top") {
+  <script>
+    $(document).ready(function() {
+      // Add smooth scrolling to all links in navbar + footer link
+      $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
 
-    // Prevent default anchor click behavior
-    event.preventDefault();
+        // Make sure this.hash has a value before overriding default behavior
+        if (this.hash !== "" && this.hash != "#top") {
 
-    // Store hash
-    var hash = this.hash;
+          // Prevent default anchor click behavior
+          event.preventDefault();
 
-    // Using jQuery's animate() method to add smooth page scroll
-    // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
-    $('html, body').animate({
-      scrollTop: $(hash).offset().top
-    }, 600, function(){
+          // Store hash
+          var hash = this.hash;
 
-      // Add hash (#) to URL when done scrolling (default click behavior)
-      window.location.hash = hash;
+          // Using jQuery's animate() method to add smooth page scroll
+          // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+          $('html, body').animate({
+            scrollTop: $(hash).offset().top
+          }, 600, function() {
+
+            // Add hash (#) to URL when done scrolling (default click behavior)
+            window.location.hash = hash;
+          });
+        } // End if
       });
-    } // End if
-  });
-})
-</script>
+    })
+  </script>
 
 </body>
 
