add store page template

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a href="#team">Team</a></li>
           <li><a href="#upcoming">Next Race</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="#top">Merch</a></li>
+          <li><a href="./merch.html">Merch</a></li>
           <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
         </ul>
       </div>
